test/fail/object-curly-spacing.js
/* eslint-disable no-unused-vars -- We're only testing ESLint rules. */

// FAIL: object-curly-spacing

const obj = { no: 'spaces', inside: 'braces' }
